--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 <p>
-<a href="https://naziaashfaque.github.io" class="button big">CLICK HERE TO GO TO MY HOMEPAGE</a>
+<a href="https://Naziaashfaque.github.io" class="button big">CLICK HERE TO GO TO MY HOMEPAGE</a>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
